libstream-more-perl (0.6.13) UNRELEASED; urgency=low

  * Stream::Out::Any:
   - shuffle targets
   - more POD

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 04 Mar 2011 16:49:36 +0300

libstream-more-perl (0.6.12) unstable; urgency=low

  [ Vyacheslav Matjukhin (No comments) ]
  * Stream::Unrotate removed
  * Stream::Simple: memory_storage() prototype fixed
  * Stream::Out::Any: 'revalidate' option implemented
  * Stream::Concat: commit now commits new underlying stream

  [ Andrei Mishchenko ]
  * DiskBuffer read_only mode, formats support and proper lag calculation

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Tue, 22 Feb 2011 22:03:17 +0300

libstream-more-perl (0.6.11) unstable; urgency=low

  * Stream::In::DiskBuffer and Stream::Queue::In now implement lag method

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 23:09:54 +0300

libstream-more-perl (0.6.10) unstable; urgency=low

  * hotfix: deadlocks in Stream::In::DiskBuffer fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 18:14:10 +0300

libstream-more-perl (0.6.9) unstable; urgency=low

  * Stream::Propagate: explicit Content-Type: text/plain

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 28 Oct 2010 16:08:19 +0400

libstream-more-perl (0.6.8) unstable; urgency=low

  * Stream::In::DiskBuffer implemented
  * Stream::Queue:
   - rewritten to use DiskBuffer
   - storage version bumped, all processes should die and restart automatically
   - implement Stream::Storage::Role::ClientList

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 04 Oct 2010 22:27:35 +0400

libstream-more-perl (0.6.7) unstable; urgency=low

  * force dependency on fresh core streams
  * Concat and MemoryStorage fixes

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 20:29:36 +0400

libstream-more-perl (0.6.6) unstable; urgency=low
