@@ -1,10 +1,14 @@
 libstream-more-perl (0.6.13) UNRELEASED; urgency=low
 
+  [ Vyacheslav Matjukhin (No comments) ]
   * Stream::Out::Any:
    - shuffle targets
    - more POD
 
- -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 04 Mar 2011 16:49:36 +0300
+  [ Andrei Mishchenko ]
+  * Stream::Queue read_only mode
+
+ -- Andrei Mishchenko <druxa@yandex-team.ru>  Fri, 04 Mar 2011 19:21:54 +0300
 
 libstream-more-perl (0.6.12) unstable; urgency=low
 
